[add] post api
