# server/api/src/controller/bookmark_controller.rs
@@ -2,7 +2,7 @@ use std::marker::PhantomData;
 use swagger::{Has, XSpanIdString};
 use async_trait::async_trait;
 
-use generated::models;
+use generated::models::{self, BookmarkPostOkResponse};
 
 #[derive(Copy, Clone)]
 pub struct Server<C> {
@@ -15,7 +15,7 @@ impl<C> Server<C> {
 }
 use generated::{
     Api,
-    BookmarksGetResponse,
+    BookmarksGetResponse, BookmarksPostResponse,
 };
 use swagger::ApiError;
 
@@ -24,10 +24,21 @@ impl<C> Api<C> for Server<C> where C: Has<XSpanIdString> + Send + Sync
 {
     async fn bookmarks_get(&self, _: &C) -> Result<BookmarksGetResponse, ApiError>
     {
-        return Ok(BookmarksGetResponse::Get(
+        return Ok(BookmarksGetResponse::OkResponse(
             models::BookmarkGetOkResponse{ 
             bookmark_directory_list: vec![]
         }));
+    }
+
+    async fn bookmarks_post(&self, 
+        bookmark_post_request_body: models::BookmarkPostRequestBody,
+        _: &C) -> Result<BookmarksPostResponse, ApiError>
+    {
+        return Ok(BookmarksPostResponse::OkResponse(
+            models::BookmarkPostOkResponse { 
+                message: "ok".to_string() 
+            }
+        ));
     }
 
 }
